<resources>
    <string name="app_name">CO2 meter</string>
    <string name="title_activity_main2">HUB</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="nav_header_title">CO2 meter</string>
    <string name="nav_header_subtitle">Application</string>
    <string name="nav_home">New Routes</string>
    <string name="nav_profil">Profil</string>
    <string name="nav_routes">My routes</string>
    <string name="nav_test">Test yourself</string>
    <string name="nav_sign_in">Sign in</string>
    <string name="nav_label_account">Account</string>
    <string name="nav_label_sign_in">Sign in or register</string>
    <string name="viewpage1">
This application allows you to account for your CO2 emissions when travelling.
Travelling is the main source of CO2 emissions, a French person emits on average 2.5 tons of CO2 per year for his travels for a total of 12 tons,
As a reminder, in theory one should not exceed 1.2 to 2 tons of CO2 per year and per inhabitant to be carbon neutral.
With this application you will be able to set monthly or annual targets to reduce your emissions.</string>
    <string name="viewpage2">There are 3 modes for posting:
Tracking: choose the logo corresponding to the mode of travel and launch the GPS tracking.
Favourite journeys: you can save your home to work or other regular journeys and just add this journey to the meter without activating tracking.
Route: The application allows you to search for a route with a starting and destination point.</string>
    <string name="viewpage3">Use: Means of transport marked with a plus allows you to define the number of passengers in the vehicle and thus reduce your emissions. The number marked below is an indication, the larger the number, the more polluting the vehicle is.</string>
    <string name="btn_continue">Continue</string>
    <string name="label_fragment_home">New routes</string>
    <string name="label_fragment_test">Test yourself</string>
    <string-array name="question_array">
        <item>How often do you eat meat ?</item>
        <item>How long does your shower last on average ?</item>
        <item>How often do you recycle ?</item>
        <item>Your garbage production compared to your neighbor ?</item>
        <item>How many times a day do you turn on the heat in your home ?</item>
        <item>Are you always careful to turn off the lights ?</item>
    </string-array>
    <string-array name="choice01">
        <item>Zero times a week</item>
        <item>Once a week</item>
        <item>Between two and three times a week</item>
        <item>Four or more times a week</item>
    </string-array>
    <string-array name="choice02">
        <item>Less than 6 minutes</item>
        <item>Between 6 and 10 minutes</item>
        <item>Between 10 and 15 minutes</item>
        <item>More than 15 minutes</item>
    </string-array>
    <string-array name="choice03">
        <item>Never</item>
        <item>Almost never</item>
        <item>Sometimes</item>
        <item>Always</item>
    </string-array>
    <string-array name="choice04">
        <item>Less than my neighbor</item>
        <item>Equivalent to my neighbor</item>
        <item>Slightly more than my neighbor.</item>
        <item>Considerably more than my neighbor</item>
    </string-array>
    <string-array name="choice05">
        <item>It\'s never turned on</item>
        <item>Between one and two hours</item>
        <item>Between three and four hours</item>
        <item>Four hours and more</item>
    </string-array>
    <string-array name="choice06">
        <item>Never</item>
        <item>Almost never</item>
        <item>Sometimes</item>
        <item>Always</item>
    </string-array>
    <string-array name="correctAnswers_array">
        <item>Zero times a week</item>
        <item>Less than 6 minutes</item>
        <item>Never</item>
        <item>Less than my neighbor</item>
        <item>It\'s never turned on</item>
        <item>Never</item>
    </string-array>
    <string name="quizz_done">Your result has been saved</string>
    <string name="quizz_not_done">It s seems we are facing a problem</string>
    <string name="quizz_complete">The quizz is complete</string>
    <string name="score">Your result :</string>
    <string name="btn_quizz_done">Quizz done</string>
    <string name="quizz_history">History</string>
    <string name="score_history">Your score was :</string>
    <string name="date_history">Done on</string>
    <string name="label_fragment_profil">Your profil</string>
    <string name="objectif">Your objectif</string>
    <string name="consommation">Your consumption</string>
    <string name="France">France</string>
    <string name="Chine">China</string>
    <string name="US">United States</string>
    <string name="Angleterre">England</string>
    <string name="no_account">Account needed</string>
    <string name="no_point">You need to respond at least one question</string>
    <string name="img_sucess">Your profile image has been saved</string>
    <string name="img_failed">Your profile image hasn\'t be saved</string>
    <string name="profil_update">Update profil</string>
    <string name="summary">Summary</string>
    <string name="conso">Your CO2 consumption</string>
    <string name="euroeco">Your Money saved</string>
    <string name="consosub">Your consumption in relation to your objective</string>
    <string name="eurosub">Compared to using a car alone</string>
    <string name="label_fragment_trajet">Your routes</string>
    <string name="consotrajet">Consumption :</string>
    <string name="disttrajet">Kilometre travelled :</string>
    <string name="update_email">User email address updated.</string>
    <string name="not_update_email">User Email doesn\'t change.</string>
    <string name="update_name">User name updated.</string>
    <string name="not_update_name">User name / pseudo doesn\'t change.</string>
    <string name="update_mdp">User password updated.</string>
    <string name="not_update_mdp">User password doesn\'t change.</string>
    <string name="new_email">Your new email</string>
    <string name="new_password">Your new password</string>
    <string name="new_name">Your new name / pseudo</string>
    <string name="sigin_mail">Your Email</string>
    <string name="sigin_mdp">Your password</string>
    <string name="passforgot">Your forgot your password ?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="auth_sucess">Authentication succeess</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="email_sent">Email sent</string>
    <string name="send_email">Send email</string>
    <string name="invalid_password_confirm">Password n°1 and n°2 must be similar</string>
    <string name="prenom">Your first name</string>
    <string name="nom">Your last name</string>
    <string name="mdp1">Your password n°1</string>
    <string name="mdp2">Your password confirm</string>
    <string name="confirm">Confirm</string>
    <string name="trajet_save">Route recorded</string>
    <string name="trajet_not_save">Route not recorded properly</string>
    <string name="no_trajet">You need to have a route set up</string>
    <string name="no_destination">You need to set up a destination</string>
    <string name="wait">Wait …</string>
    <string name="near_location_search">We are looking for the nearest location</string>
    <string name="current_location_null">Current location is null. Permission Denied.</string>
    <string name="destination">Destination</string>
    <string name="departure_optional">Departure (optional)</string>
    <string name="done">Save your travel</string>
    <string name="nodest">Launch tracking</string>
    <string name="nodest2">Stop tracking</string>
    <string name="Distance" translatable="false">Distance </string>
    <string name="Time">Time</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">invalid lat long used</string>
    <string name="no_location_data_provided">no location data provided</string>
    <string name="address_found">address found</string>
    <string name="no_geocoder_available">no geocoder available</string>
    <string name="no_location_detected">no location detected</string>
    <string name="permission_rationale">permission rationale</string>
    <string name="update_km">Your Kilometers Travelled</string>
    <string name="newfavroute">New favorite route</string>
    <string name="nbpersonne">Number of passenger</string>
    <string name="sure">Are you sure ?</string>
    <string name="deleteitem">Do you want to delete this item</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="titre">Title</string>
    <string name="nbkilometre">Number of Km</string>
    <string name="save">Save</string>
    <string name="add_favorite_route">Add a favorite route</string>
    <string name="name_of_route">Name of Route</string>
    <string name="kilometer">Kilometers</string>
    <string name="objco2">You are setting your CO2 goal at :</string>
    <string name="objeuro">You are setting your euro goal at :</string>
    <string name="total_eco_co2">CO2 avoid</string>
    <string name="total_co2">Total CO2</string>
    <string name="total_kilometre">Total kilometer</string>
    <string name="resetuserdata">Reset your consuption and objectives</string>
    <string name="resetotherdata">Reset your route and your quizz</string>
    <string name="use_of_different_means_of_transport">% of use of different means of transport</string>
    <string name="your_consumption_compared_to_other_country">Your consumption compared to other country</string>
    <string name="recover_npassword">Recover\nPassword</string>
    <string name="update_profil">Update profil</string>
    <string name="sign_up">Sign Up</string>
    <string name="sigin_nom">First Name</string>
    <string name="sigin_prnom">Last Name</string>
    <string name="sigin_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="notifdefis">Time to check your challenge</string>
    <string name="launchdef">Challenge launched</string>
    <string name="periodedef">During ?</string>
    <string name="plantV">Green plante</string>
    <string name="plantVDesc">You need to avoid CO2</string>
    <string name="QM">Quizz master</string>
    <string name="QMSTATUE">Your score</string>
    <string name="QMDESC">You need to get the average score on quizz</string>
    <string name="VOITC">Michael Schumacher</string>
    <string name="VOITCDESC">You need to consumn less than XZ of CO2 using car</string>
    <string name="bonneH">Good habits</string>
    <string name="bonneHDESC">You need to do at least XZ travel by using green transport in the last 10 travel</string>
    <string name="avc">Airplane!</string>
    <string name="avcDESC">You need to consumn less than XZ of CO2 using Avion</string>
    <string name="motoc">Valentino Rossi</string>
    <string name="motocDESC">You need to consumn less than XZ of CO2 using motocycle</string>
    <string name="covoit">Car sharing</string>
    <string name="covoitDESC">You need to do at least XZ by car sharing</string>
    <string name="rosap">Rosa Park</string>
    <string name="rosapDESC">You need to do at least XZ by Bus</string>
    <string name="interR">Quai 9 3/4</string>
    <string name="interRDESC">You need to do at least XZ by rail</string>
    <string name="marcheB">Forest Gump</string>
    <string name="marcheBDESC">You need to do at least XZ by walking</string>
    <string name="maillotJ">Yellow jersey</string>
    <string name="maillotJDESC">You need to do at least XZ by bicycle</string>
    <string name="globeT">Globe Trotteur</string>
    <string name="globeTDESC">You need to travel more than XZ</string>
</resources>