<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_circle3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:translationX="36dp"
        android:layout_margin="16dp"
        android:rotation="270"
        android:src="@drawable/ic_leaf"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="-94dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand"
            android:text="@string/newfavroute"
            android:textAlignment="center"
            android:textColor="@color/black_txt_Color"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/ntitlepref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titre"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textAlignment="center"
            android:theme="@style/PrimaryColorEditTextStyle" />

        <EditText
            android:id="@+id/nprefDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nbkilometre"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textAlignment="center"
            android:theme="@style/PrimaryColorEditTextStyle" />

        <Button
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:id="@+id/btnsavepref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_primary_btn"
            android:text="@string/save"
            android:foreground="?android:attr/selectableItemBackground"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
